--- a/.github/workflows/buildAndTestCMake.yml
+++ b/.github/workflows/buildAndTestCMake.yml
@@ -101,6 +101,11 @@ jobs:
           CMAKE_BUILD_TYPE: Release
           STABLEHLO_ENABLE_BINDINGS_PYTHON: ON
 
+    - name: See all
+      if: always()
+      run: |
+        ls
+    
     - name: Upload Core Dumps
       if: always()
       uses: actions/upload-artifact@v4
